@@ -7,7 +7,7 @@
 <widget class="GtkWindow" id="top">
   <property name="width_request">800</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Book</property>
+  <property name="title" translatable="no">Book</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -124,7 +124,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="avail_label">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">avail_label</property>
+	      <property name="label" translatable="no">avail_label</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -148,7 +148,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="book_label">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">book_label</property>
+	      <property name="label" translatable="no">book_label</property>
 	      <property name="use_underline">True</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -542,7 +542,7 @@
   <property name="width_request">300</property>
   <property name="height_request">400</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">dialog1</property>
+  <property name="title" translatable="no">dialog1</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -617,7 +617,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="title">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">label6</property>
+	      <property name="label" translatable="no">label6</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
